Aula 12 - CSS (Parte 1)

--- a/semana3/sistema-loja/index.html
+++ b/semana3/sistema-loja/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="style.css"/>
     <title>Nome da Loja</title>
 </head>
 <body>
     <div>
-        <h1>Bem-vindo ao <em>Brenda Simionato - Estética Avançada</em>!</h1>
-        <p>Clinica de estética especializada em tratamentos capilares, corporais e faciais.</p>
+        <h1>Bem-vindo ao Brenda Simionato - Estética Avançada!</h1>
+        <p><b>Clinica de estética especializada em tratamentos capilares, corporais e faciais.</b></p>
     </div>
 
     <div>
@@ -20,7 +21,7 @@
     </div>
 
     <div>
-        Contamos com uma equipe qualificada para melhor atende-los, tratamentos especiais e avançados e com um ótimo custo beneficio.
+        <b>Contamos com uma equipe qualificada para melhor atende-los, tratamentos especiais e avançados e com um ótimo custo beneficio.</b>
     </div>
 
     <div>
