Modificação Sistema Loja

--- a/semana3/sistema-loja/index.html
+++ b/semana3/sistema-loja/index.html
@@ -9,23 +9,24 @@
 </head>
 <body>
     <div>
-        <h1>Bem-vindo ao Brenda Simionato - Estética Avançada!</h1>
-        <p><b>Clinica de estética especializada em tratamentos capilares, corporais e faciais.</b></p>
+        <h1><em><b>Bem-vindo ao Brenda Simionato - Estética Avançada!</b></em></h1>
+        <h2><p>A Clínica de Estética e Beleza é uma prestadora de serviços que oferece tratamentos rápidos ou terapêuticos, externos, que objetivam a reabilitação ou melhora estética e da saúde dos clientes, através da aplicação de cosméticos e de terapias diversas.</p></h2>
     </div>
 
     <div>
-        <a href="file:///C:/Users/brend/Brenda-Simionato/semana3/sistema-loja/index.html">Página Inicial</a>
-        <a href="file:///C:/Users/brend/Brenda-Simionato/semana3/sistema-loja/ctrl-estoque.html">Controle de Estoque</a>
-        <a href="file:///C:/Users/brend/Brenda-Simionato/semana3/sistema-loja/add-produto.html">Adicionar Produto</a>
-        <a href="file:///C:/Users/brend/Brenda-Simionato/semana3/sistema-loja/funcionarios.html">Funcionários</a>
+        <a href="file:///C:/Users/brend/Brenda-Simionato/semana3/sistema-loja/index.html"><b>Página Inicial</b></a>
+        <a href="file:///C:/Users/brend/Brenda-Simionato/semana3/sistema-loja/ctrl-estoque.html"><b>Controle de Estoque</b></a>
+        <a href="file:///C:/Users/brend/Brenda-Simionato/semana3/sistema-loja/add-produto.html"><b> Produto</b></a>
+        <a href="file:///C:/Users/brend/Brenda-Simionato/semana3/sistema-loja/funcionarios.html"><b>Funcionários</b></a>
     </div>
 
     <div>
-        <b>Contamos com uma equipe qualificada para melhor atende-los, tratamentos especiais e avançados e com um ótimo custo beneficio.</b>
+        <h3><b>Oferecemos tratamentos estéticos com resultados, elevando a 
+            auto estima do nosso cliente, proporcionando a ele melhor qualidade de vida e bem-estar.</b></h3>
     </div>
 
     <div>
-        <p>Siga-nos nas redes sociais!</p>
+        <h4><p>Siga-nos nas redes sociais!</p></h4>
 
         <div>
             <img src="https://image.flaticon.com/icons/png/512/25/25305.png"/>
