--- a/semana3/sistema-loja/add-produto.html
+++ b/semana3/sistema-loja/add-produto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="stylesheet" type="text/css" href="style3.css"/>
     <title>Adicionar Produto</title>
 </head>
 <body>
@@ -13,10 +13,10 @@
     </div>
     
     <div>
-        <a href="file:///C:/Users/brend/Brenda-Simionato/semana3/sistema-loja/index.html">Página Inicial</a>
-        <a href="file:///C:/Users/brend/Brenda-Simionato/semana3/sistema-loja/ctrl-estoque.html">Controle de Estoque</a>
-        <a href="file:///C:/Users/brend/Brenda-Simionato/semana3/sistema-loja/add-produto.html">Adicionar Produto</a>
-        <a href="file:///C:/Users/brend/Brenda-Simionato/semana3/sistema-loja/funcionarios.html">Funcionários</a>
+        <a href="file:///C:/Users/brend/Brenda-Simionato/semana3/sistema-loja/index.html"><b>Página Inicial</b></a>
+        <a href="file:///C:/Users/brend/Brenda-Simionato/semana3/sistema-loja/ctrl-estoque.html"><b>Controle de Estoqu</b></a>
+        <a href="file:///C:/Users/brend/Brenda-Simionato/semana3/sistema-loja/add-produto.html"><b>Adicionar Produto</b></a>
+        <a href="file:///C:/Users/brend/Brenda-Simionato/semana3/sistema-loja/funcionarios.html"><b>Funcionários</b></a>
     </div>
 
     
