--- a/semana3/bugfixes/exercicio-bugfixes/home.html
+++ b/semana3/bugfixes/exercicio-bugfixes/home.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="index.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <title>For Ever 4</title>
+    <link rel="For Ever 4" type="text/css" href="style.css"/>
 </head>
 
 <body>
@@ -22,7 +23,7 @@
             <h3> Realize seus sonhos conosco</h3>
         </div>
 
-        <div class="container" id="container-para-comprar">
+        <div class="container" id="container-para-comprar" style="padding: 40px;">
             <p> BORA COMEÇAR A </p>
             <p><a href="comprar.html"><button class="botao-amarelo" > COMPRAR </button></a></p>
         </div>
