--- a/semana3/bugfixes/exercicio-bugfixes/home.html
+++ b/semana3/bugfixes/exercicio-bugfixes/home.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" type="text/css" href="index.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <title>For Ever 4</title>
-    <link rel="For Ever 4" type="text/css" href="style.css"/>
+    <link rel="stylesheet" type="text/css" href="index.css">
+
 </head>
 
 <body>
