--- a/semana4/flex-grid/index.html
+++ b/semana4/flex-grid/index.html
@@ -11,8 +11,11 @@
 
 <body>
     <header>
-        <img class="logo" src="./confeitaria/cake-1321215613168069161.png" alt="">
-        <h1>Confeitaria</h1>
+        <div class="logo">
+            <img src="./confeitaria/cake-1321215613168069161.png" alt="">
+            <h1>Confeitaria</h1>
+        </div>
+        
         <div class="botao-login">
             <button type="submit">Login</button>
         </div>
